# sudoko-Project

./: CMakeLists.txt  LP.c  LP.h  board.c  board.h  cmdType.c  cmdType.h  def.c  def.h  doublyLinkedList.c  doublyLinkedList.h  errors.c  errors.h  game.c  game.h  main.c  makefile  makefile.txt  new_parser.c  new_parser.h  parser.c  parser.h  solver.c  solver.h  stack.c  stack.h  status.c  status.h
